--- a/puppet/hiera.yaml
+++ b/puppet/hiera.yaml
@@ -2,9 +2,13 @@
 :backends:
   - yaml
 :hierarchy:
-  - "nodes/%{facts.networking.hostanme}"
-  - "nodes/%{::trusted.certname}"
+  - "nodes/%{facts.networking.hostname}"
+  - "nodes/%{trusted.certname}"
   - wikidefault 
   - test
 :yaml:
-  :datadir: "/etc/puppetlabs/code/environments/%{::environment}/hieradata"
+# datadir is empty here, so hiera uses its defaults:
+# # - /etc/puppetlabs/code/environments/%{environment}/hieradata on *nix
+# # - %CommonAppData%\PuppetLabs\code\environments\%{environment}\hieradata on Windows
+# # When specifying a datadir, make sure the directory exists.
+  :datadir: 
