add strict_variable to true

--- a/puppet/puppet.conf
+++ b/puppet/puppet.conf
@@ -14,3 +14,5 @@ codedir = /etc/puppetlabs/code
 [main]
 dns_alt_names = puppet,puppetmaster
 environment = production
+strict_variables = true
+hiera_config = /etc/puppetlabs/code/hiera.yaml
